[tool.poetry]
name = "tutorial-streamlit"
version = "0.1.0"
description = ""
authors = ["Kenya Nonaka <kenya.nonaka@uzabase.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
