[tool.poetry]
name = "tutorial-streamlit"
version = "0.1.0"
description = ""
authors = ["opoblblfozb@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.11.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pylint = "^2.14.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
